# Final_Assessment

./: README.md  main.py  pyproject.toml  test.db
results/: response_1767041617047.json  response_1767042886506.json
src/: Summary.md  app.py
src/db_prep/: db.py  db_prep.py
xray/: core.py  llm.py  prompts.py
